--- a/index.html
+++ b/index.html
@@ -3803,9 +3803,9 @@
                   height="80"
                 />
 
-                <p class="testimonial-name">Alan Doe</p>
+                <p class="testimonial-name">Felix Udoh</p>
 
-                <p class="testimonial-title">CEO & Founder Invision</p>
+                <p class="testimonial-title">CEO & Founder</p>
 
                 <img
                   src="./assets/images/icons/quotes.svg"
