--- a/index.html
+++ b/index.html
@@ -3797,7 +3797,7 @@
               <div class="testimonial-card">
                 <img
                   src="./assets/images/testimonial-1.jpg"
-                  alt="alan doe"
+                  alt="felix udoh"
                   class="testimonial-banner"
                   width="80"
                   height="80"
